clusters/main/kubernetes/apps/stunner/app/udproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: stunner-gatewayclass
spec:
  controllerName: "stunner.l7mp.io/gateway-operator"
  parametersRef:
    group: "stunner.l7mp.io"
    kind: GatewayConfig
    name: stunner-gatewayconfig
    namespace: stunner-system
  description: "STUNner is a WebRTC ingress gateway for Kubernetes"

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: udp-gateway
  namespace: stunner-system
spec:
  gatewayClassName: stunner-gatewayclass
  listeners:
    - name: udp-listener
      port: 3478
      protocol: TURN-UDP
    - name: tls
      port: 5349
      protocol: TURN-TLS
      tls:
        certificateRefs:
          - kind: Secret
            name: certificate-issuer-domain-0-wildcard
            namespace: clusterissuer
